--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.20.1", features = ["default", "net", "sync"] }
-thiserror = "1.0.32"
-clap = { version = "4.4.1", features = ["derive"] }
+tokio = { version = "1.36.0", features = [ "net", "sync", "rt-multi-thread", "macros"] }
+serde = "1.0.197"
+bincode = "1.3.3"
+thiserror = "1.0.57"
+clap = { version = "4.5.1", features = ["derive"] }
 random_word = { version = "0.4.3", features = ["en"] }
 # crossbeam-queue = "0.3.11"
