--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ bincode = "1.3.3"
 thiserror = "1.0.57"
 clap = { version = "4.5.1", features = ["derive"] }
 random_word = { version = "0.4.3", features = ["en"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 # crossbeam-queue = "0.3.11"
