--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.36.0", features = [ "net", "sync", "rt-multi-thread", "macros"] }
+tokio = { version = "1.36.0", features = [ "net", "sync", "rt-multi-thread", "macros", "time"] }
 serde = "1.0.197"
 bincode = "1.3.3"
 thiserror = "1.0.57"
