--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ clap = { version = "4.5.1", features = ["derive"] }
 random_word = { version = "0.4.3", features = ["en"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
-# crossbeam-queue = "0.3.11"
+actix = { version = "0.13.3", features = ["default"] }
+actix-rt = "2.2"
