--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.36.0", features = [ "net", "sync", "rt-multi-thread", "macros", "time"] }
+tokio-util = "0.7.10"
 serde = "1.0.197"
 bincode = "1.3.3"
+bytes = "1.5.0"
 thiserror = "1.0.57"
 clap = { version = "4.5.1", features = ["derive"] }
 random_word = { version = "0.4.3", features = ["en"] }
