--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 actix = { version = "0.13.3", features = ["default"] }
 actix-rt = "2.2"
+log = "0.4.21"
