--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,29 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1.36.0", features = [ "net", "sync", "rt-multi-thread", "macros", "time"] }
 tokio-util = "0.7.10"
-serde = "1.0.197"
-bincode = "1.3.3"
-bytes = "1.5.0"
-thiserror = "1.0.57"
-clap = { version = "4.5.1", features = ["derive"] }
-random_word = { version = "0.4.3", features = ["en"] }
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+
 actix = { version = "0.13.3", features = ["default"] }
 actix-rt = "2.2"
-log = "0.4.21"
+
+futures = "0.3.30"
+futures-util = "0.3.30"
+async-stream = "0.3.5"
+
+uuid = { version = "1.7.0", features = ["v4"] }
+
+serde = "1.0.197"
+
+bincode = "1.3.3"
+bytes = "1.5.0"
+
+thiserror = "1.0.57"
+
+clap = { version = "4.5.1", features = ["derive"] }
+
+random_word = { version = "0.4.3", features = ["en"] }
+
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+
+scc = "2.0.17"
+#log = "0.4.21"
