--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,5 +36,5 @@ random_word = { version = "0.4.3", features = ["en"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 
-#scc = "2.0.17"
+scc = "2.0.17"
 #log = "0.4.21"
