--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,6 @@ actix = { version = "0.13.3", features = ["default"] }
 actix-rt = "2.2"
 actix-codec = "0.5.2"
 
-futures = "0.3.30"
-futures-util = "0.3.30"
-async-stream = "0.3.5"
-
-uuid = { version = "1.7.0", features = ["v4"] }
-
 serde = "1.0.197"
 serde_derive = "1.0.197"
 byteorder = "1.5.0"
@@ -33,7 +27,6 @@ clap = { version = "4.5.1", features = ["derive"] }
 random_word = { version = "0.4.3", features = ["en"] }
 
 tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["time", "fmt"] }
 
-scc = "2.0.17"
-#log = "0.4.21"
+time = { version = "0.3.34", features = ["macros", "formatting", "parsing", "local-offset", "default"] }
